<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Inicio">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bienvenida"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:fontFamily="@font/lobster"
        app:layout_constraintBottom_toTopOf="@+id/subir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bienvenida2"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:fontFamily="@font/lobster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/buscar"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/buscar"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="@font/zillaslab"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/subir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/subir"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/subir"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="@font/zillaslab"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971">


        <ImageView
            android:id="@+id/gifpensar"
            android:layout_width="207dp"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/pensando" />

        <ImageView
            android:id="@+id/gifsarten"
            android:layout_width="204dp"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/sarten" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>